# mandate

./: .gitignore  .travis.yml  Pipfile  README.md  deploy_script.sh  pyproject.toml
.github/workflows/: main.yml
mandate/: __init__.py  client.py
tests/: MockClient.py  test_api.py  test_group.py  test_user.py
