[tool.poetry]
name = "mandate"
version = "0.2.4"
description = "Async wrapper for AWS cognito. Heavily based on capless/warrant"
authors = ["Errietta Kostala <errietta@errietta.me>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"
envs = ">=0.3.0"
"aioboto3" = "*"
aiohttp = "*"
aiohttp-client-manager = "*"
lru-dict = "*"
attrs = "*"
asynctest = "*"
python-jose = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
